<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/largetext"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:text="@string/radio" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:text="@string/radio" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/radio" />

        </RadioGroup>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button1" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>